# glview-kit

./: CMakeLists.txt  README.md  generate_vs.bat
src/: Main.cpp  README.txt  RenderingTester.cpp  RenderingTester.h  oevTest.cpp
src/VC14.0/: GLViewApi.sln  GLViewApi.vcxproj  GLViewApi.vcxproj.filters
src/include/: oevSDK.h
